@@ -20,7 +20,7 @@ GTEST_CPPFLAGS_ = -I$(GTEST_DIR) -I$(GTEST_DIR)/include
 
 SUBDIRS = $(BOEHM_GC_DIR) $(ONIG_DIR) .
 
-bin_PROGRAMS = mosh test_vm test_port
+bin_PROGRAMS = mosh test_vm test_port test_fasl
 
 # mosh
 # -O3 causes miss compile of NumberReader.tab.cpp.
@@ -291,6 +291,13 @@ check_PROGRAMS += test_port
 test_port_CXXFLAGS = $(mosh_CFLAGS) $(mosh_OPTS) -I$(GTEST_DIR) -I$(GTEST_DIR)/include -DGTEST_HAS_CLONE=0
 test_port_SOURCES = PortTest.cpp TestingSignalHandler.cpp
 test_port_LDADD = libmosh.a gtest_main.a $(GC_LIB) $(REGEXP_LIB)
+
+TESTS += test_fasl
+check_PROGRAMS += test_fasl
+test_fasl_CXXFLAGS = $(mosh_CFLAGS) $(mosh_OPTS) -I$(GTEST_DIR) -I$(GTEST_DIR)/include -DGTEST_HAS_CLONE=0
+test_fasl_SOURCES = FaslTest.cpp TestingSignalHandler.cpp TestingVM.cpp
+test_fasl_LDADD = libmosh.a gtest_main.a $(GC_LIB) $(REGEXP_LIB)
+
 
 
 # doc:
