@@ -1,3 +1,11 @@
+2009-01-02  higepon  <higepon@users.sourceforge.jp>
+
+        * FaslTest.cpp (TEST_F): Added write/read support of EqvHashTable.
+
+        * Fasl.h (scheme): Added write/read support of Record.
+
+        * FaslTest.cpp (TEST_F): Added Test for writing Records. Yeah it's test first.
+
 2009-01-01  higepon  <higepon@users.sourceforge.jp>
 
         * Changed libtool to 2.2.6a.
